--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -2,23 +2,23 @@
 - hosts: dev
   become: True
   tasks:
-    - name: Install python pip
-      yum:
-        name: python-pip
-        state: present
-    - name: Install docker
-      yum:
-        name: docker
-        state: present
-    - name: start docker
-      service:
-        name: docker
-        state: started
-        enabled: yes
-    - name: Install docker-py python module
-      pip:
-        name: docker-py
-        state: present
+    # - name: Install python pip
+    #   yum:
+    #     name: python-pip
+    #     state: present
+    # - name: Install docker
+    #   yum:
+    #     name: docker
+    #     state: present
+    # - name: start docker
+    #   service:
+    #     name: docker
+    #     state: started
+    #     enabled: yes
+    # - name: Install docker-py python module
+    #   pip:
+    #     name: docker-py
+    #     state: present
     - name: Start the container
       docker_container:
         name: hariapp
