--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -1,28 +1,11 @@
 ---
-- hosts: dev
-  become: True
+- hosts: college-app
+  # become: True
   tasks:
-    # - name: Install python pip
-    #   yum:
-    #     name: python-pip
-    #     state: present
-    # - name: Install docker
-    #   yum:
-    #     name: docker
-    #     state: present
-    # - name: start docker
-    #   service:
-    #     name: docker
-    #     state: started
-    #     enabled: yes
-    # - name: Install docker-py python module
-    #   pip:
-    #     name: docker-py
-    #     state: present
     - name: Start the container
       docker_container:
-        name: hariapp
-        image: "hiclass.azurecr.io/lys:{{DOCKER_TAG}}"
+        name: college-app
+        image: "hiclass.azurecr.io/college-app:{{DOCKER_TAG}}"
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
