--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -5,7 +5,7 @@
     - name: Start the container
       docker_container:
         name: college-app
-        image: "hiclass.azurecr.io/college-app:{{DOCKER_TAG}}"
+        image: "hiclass.azurecr.io/college:{{DOCKER_TAG}}"
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
