--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     </dependency>
   </dependencies>
   <build>
+      <plugins>
+        <plugin>
+          <goupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+      </plugins>
     <finalName>dockeransible</finalName>
   </build>
 </project>
