--- a/deploy-docker.yml
+++ b/deploy-docker.yml
@@ -8,20 +8,20 @@
 
     - name: Start the container
       docker_container:
-        name: college-app
+        name: test-app
         image: "hiclass.azurecr.io/lys:{{DOCKER_TAG}}"
         state: started
         published_ports:
           - 0.0.0.0:8080:8080
       become: yes
 
-    # - name: Prune everything
-    #   docker_prune:
-    #     containers: yes
-    #     images: yes
-    #     images_filters:
-    #       dangling: false
-    #     networks: yes
-    #     volumes: yes
-    #     builder_cache: yes
-    #   become: yes
+    - name: Prune everything
+      docker_prune:
+        containers: yes
+        images: yes
+        images_filters:
+          dangling: false
+        networks: yes
+        volumes: yes
+        builder_cache: yes
+      become: yes
