--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <build>
       <plugins>
         <plugin>
-          <goupId>org.springframework.boot</groupId>
+          <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
         </plugin>
       </plugins>
