--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 logging.level.root=INFO
 # server.port = 19999
 logging.level.root=INFO
-logging.file=/logs/istool.log
+; logging.file=/logs/istool.log
